-- PostgreSQL. Запускайте этот файл через psql.
-- Если база уже создана, можно пропустить первые три строки и выполнять только DDL-часть.
DROP DATABASE IF EXISTS "DeanOfficeDb";
CREATE DATABASE "DeanOfficeDb";
\connect "DeanOfficeDb";

DROP TABLE IF EXISTS "VerificationCodes", "AuditLogs", "Attendance", "Grades", "GroupSubjects", "Students", "Groups", "Specialties", "Faculties", "Subjects", "Teachers", "Semesters", "Users", "Roles" CASCADE;

CREATE TABLE "Roles" (
    "Id" integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "Name" varchar(50) NOT NULL UNIQUE
);

CREATE TABLE "Faculties" (
    "Id" integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "Name" varchar(150) NOT NULL,
    "Code" varchar(20) NOT NULL
);

CREATE TABLE "Specialties" (
    "Id" integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "Name" varchar(150) NOT NULL,
    "Code" varchar(20) NOT NULL,
    "FacultyId" integer NOT NULL REFERENCES "Faculties"("Id") ON DELETE CASCADE
);

CREATE TABLE "Groups" (
    "Id" integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "Name" varchar(30) NOT NULL,
    "Course" integer NOT NULL CHECK ("Course" BETWEEN 1 AND 6),
    "YearOfAdmission" integer NOT NULL,
    "SpecialtyId" integer NOT NULL REFERENCES "Specialties"("Id") ON DELETE CASCADE
);

CREATE TABLE "Students" (
    "Id" integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "LastName" varchar(80) NOT NULL,
    "FirstName" varchar(80) NOT NULL,
    "MiddleName" varchar(80),
    "StudentBookNumber" varchar(30) NOT NULL UNIQUE,
    "BirthDate" timestamp without time zone NOT NULL,
    "IsActive" boolean NOT NULL DEFAULT true,
    "GroupId" integer NOT NULL REFERENCES "Groups"("Id") ON DELETE CASCADE
);

CREATE TABLE "Teachers" (
    "Id" integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "LastName" varchar(80) NOT NULL,
    "FirstName" varchar(80) NOT NULL,
    "MiddleName" varchar(80),
    "Department" varchar(120) NOT NULL,
    "Email" varchar(120)
);

CREATE TABLE "Users" (
    "Id" integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "UserName" varchar(50) NOT NULL UNIQUE,
    "PasswordHash" varchar(200) NOT NULL,
    "FullName" varchar(150) NOT NULL,
    "Email" varchar(120),
    "PhoneNumber" varchar(30),
    "EmailConfirmed" boolean NOT NULL DEFAULT false,
    "PhoneNumberConfirmed" boolean NOT NULL DEFAULT false,
    "ProfilePhotoPath" varchar(300),
    "RoleId" integer NOT NULL REFERENCES "Roles"("Id") ON DELETE RESTRICT,
    "StudentId" integer UNIQUE REFERENCES "Students"("Id") ON DELETE SET NULL,
    "TeacherId" integer UNIQUE REFERENCES "Teachers"("Id") ON DELETE SET NULL
);

CREATE TABLE "Subjects" (
    "Id" integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "Name" varchar(120) NOT NULL,
    "Code" varchar(20) NOT NULL UNIQUE,
    "Hours" integer NOT NULL CHECK ("Hours" > 0)
);

CREATE TABLE "Semesters" (
    "Id" integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "Name" varchar(50) NOT NULL,
    "Number" integer NOT NULL CHECK ("Number" BETWEEN 1 AND 12),
    "AcademicYear" varchar(20) NOT NULL,
    "StartDate" timestamp without time zone NOT NULL,
    "EndDate" timestamp without time zone NOT NULL
);

CREATE TABLE "GroupSubjects" (
    "Id" integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "GroupId" integer NOT NULL REFERENCES "Groups"("Id") ON DELETE CASCADE,
    "SubjectId" integer NOT NULL REFERENCES "Subjects"("Id") ON DELETE CASCADE,
    "TeacherId" integer NOT NULL REFERENCES "Teachers"("Id") ON DELETE CASCADE,
    "SemesterId" integer NOT NULL REFERENCES "Semesters"("Id") ON DELETE CASCADE,
    CONSTRAINT "UX_GroupSubjects_All" UNIQUE ("GroupId", "SubjectId", "TeacherId", "SemesterId")
);

CREATE TABLE "Grades" (
    "Id" integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "StudentId" integer NOT NULL REFERENCES "Students"("Id") ON DELETE CASCADE,
    "GroupSubjectId" integer NOT NULL REFERENCES "GroupSubjects"("Id") ON DELETE CASCADE,
    "Value" integer NOT NULL CHECK ("Value" BETWEEN 0 AND 10),
    "GradeType" varchar(40) NOT NULL,
    "GradeDate" timestamp without time zone NOT NULL,
    "Comment" varchar(300)
);

CREATE TABLE "Attendance" (
    "Id" integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "StudentId" integer NOT NULL REFERENCES "Students"("Id") ON DELETE CASCADE,
    "GroupSubjectId" integer NOT NULL REFERENCES "GroupSubjects"("Id") ON DELETE CASCADE,
    "LessonDate" timestamp without time zone NOT NULL,
    "IsPresent" boolean NOT NULL,
    "Comment" varchar(300)
);

CREATE TABLE "AuditLogs" (
    "Id" integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "UserId" integer REFERENCES "Users"("Id") ON DELETE SET NULL,
    "Action" varchar(80) NOT NULL,
    "EntityName" varchar(80) NOT NULL,
    "EntityId" varchar(40) NOT NULL,
    "Timestamp" timestamp with time zone NOT NULL DEFAULT now(),
    "Details" varchar(1000) NOT NULL
);

CREATE TABLE "VerificationCodes" (
    "Id" integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "UserId" integer NOT NULL REFERENCES "Users"("Id") ON DELETE CASCADE,
    "Purpose" varchar(40) NOT NULL,
    "Destination" varchar(120) NOT NULL,
    "Code" varchar(6) NOT NULL,
    "CreatedAt" timestamp with time zone NOT NULL DEFAULT now(),
    "ExpiresAt" timestamp with time zone NOT NULL,
    "UsedAt" timestamp with time zone,
    "ResetToken" varchar(80)
);

CREATE INDEX "IX_Specialties_FacultyId" ON "Specialties"("FacultyId");
CREATE INDEX "IX_Groups_SpecialtyId" ON "Groups"("SpecialtyId");
CREATE INDEX "IX_Students_GroupId" ON "Students"("GroupId");
CREATE INDEX "IX_GroupSubjects_GroupId" ON "GroupSubjects"("GroupId");
CREATE INDEX "IX_GroupSubjects_SubjectId" ON "GroupSubjects"("SubjectId");
CREATE INDEX "IX_GroupSubjects_TeacherId" ON "GroupSubjects"("TeacherId");
CREATE INDEX "IX_Grades_StudentId" ON "Grades"("StudentId");
CREATE INDEX "IX_Attendance_StudentId" ON "Attendance"("StudentId");
CREATE INDEX "IX_AuditLogs_UserId" ON "AuditLogs"("UserId");
CREATE INDEX "IX_VerificationCodes_UserId_Purpose_Code" ON "VerificationCodes"("UserId", "Purpose", "Code");
